--- a/BSPracaInzynierska/Client/Pages/Login.razor
+++ b/BSPracaInzynierska/Client/Pages/Login.razor
@@ -16,7 +16,7 @@
             <br />
             <button class="btn btn-primary" @onclick="LoginUser">Login</button>
             <br />
-            <p>Don't have account? <a href="" @onclick="SignUp" class="link-primary">Sign up for free</a></p>
+            <p>Don't have account? <button class="btn btn-outline-primary" @onclick="SignUp">Create one!</button></p>
         </div>
         <div class="col-3"></div>
     </div>
