--- a/BSPracaInzynierska/Client/Pages/AddPlaylist.razor
+++ b/BSPracaInzynierska/Client/Pages/AddPlaylist.razor
@@ -4,52 +4,49 @@
 @inject NavigationManager navigationManager
 
 <div class="text-center">
-    <h1>Music Playlist Creator</h1>
+    <h1 style="font-weight:bold">Music Playlist Creator</h1>
 </div>
+<br />
 <div class="container mx-auto">
-    <EditForm Model="@playlistService.musicPlaylist" OnValidSubmit="@CreatePlaylist">
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-                <p class="font-weight-bold" style="margin-bottom:2">Playlist Name</p>
+    <div class="row">
+        <div class="col-6">
+            <EditForm Model="@playlistService.musicPlaylist" OnValidSubmit="@CreatePlaylist" style="margin: auto">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+
+                <p class="font-weight-bold">Playlist Name</p>
                 <InputText style="width:100%;" @bind-Value="playlistService.musicPlaylist.PlaylistName" placeholder="YouTube URL" aria-label="YouTube URL" aria-describedby="basic-addon2" />
                 <br />
                 <br />
-                <p class="font-weight-bold" style="margin-bottom:2">Description</p>
+                <p class="font-weight-bold">Description</p>
                 <InputTextArea style="width:100%;" @bind-Value="playlistService.musicPlaylist.Description" placeholder="YouTube URL" aria-label="YouTube URL" aria-describedby="basic-addon2" />
                 <br />
                 <button class="btn btn-success" type="submit">@btnText</button>
-            </div>
-            <div class="col-2"></div>
+            </EditForm>
         </div>
-    </EditForm>
-    <br />
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
-            <p class="font-weight-bold">BlindGuess ranked parameters</p>
-            <div class="input-group mb-3" style="width: 50%;">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="">Game Time | Number of songs</span>
+        <div class="col-6">
+            <div class="container" style="margin:auto">
+                <p class="font-weight-bold">BlindGuess ranked parameters</p>
+                <div class="input-group mb-3" style="width: 100%;">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="">Game Time | Number of songs</span>
+                    </div>
+                    <input min=1 max=30 @bind-value="playlistService.musicPlaylist.blindGuessTime" type="number" class="form-control" placeholder="Game Time" aria-label="Game Time" aria-describedby="basic-addon2">
+                    <input Min=1 max=@playlistService.songs.Count() @bind-value="playlistService.musicPlaylist.blindGuessSongs" type="number" class="form-control" placeholder="Number of Songs" aria-label="Number of Songs" aria-describedby="basic-addon2">
                 </div>
-                <input min=1 max=30 @bind-value="playlistService.musicPlaylist.blindGuessTime" type="number" class="form-control" placeholder="Game Time" aria-label="Game Time" aria-describedby="basic-addon2">
-                <input Min=1 max=@playlistService.songs.Count() @bind-value="playlistService.musicPlaylist.blindGuessSongs" type="number" class="form-control" placeholder="Number of Songs" aria-label="Number of Songs" aria-describedby="basic-addon2">
-            </div>
-            <p class="font-weight-bold">LightningRound ranked parameters</p>
-            <div class="input-group mb-3" style="width: 50%;">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="">Round time | Number of songs</span>
+                <p class="font-weight-bold">LightningRound ranked parameters</p>
+                <div class="input-group mb-3" style="width: 100%;">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="">Round time | Number of songs</span>
+                    </div>
+                    <input min=1 max=10 @bind-value="playlistService.musicPlaylist.lightningRoundTime" type="number" class="form-control" placeholder="Game Time" aria-label="Game Time" aria-describedby="basic-addon2">
+                    <input Min=1 max=@playlistService.songs.Count() @bind-value="playlistService.musicPlaylist.lightningRoundSongs" type="number" class="form-control" placeholder="Number of Songs" aria-label="Number of Songs" aria-describedby="basic-addon2">
                 </div>
-                <input min=1 max=10 @bind-value="playlistService.musicPlaylist.lightningRoundTime" type="number" class="form-control" placeholder="Game Time" aria-label="Game Time" aria-describedby="basic-addon2">
-                <input Min=1 max=@playlistService.songs.Count() @bind-value="playlistService.musicPlaylist.lightningRoundSongs" type="number" class="form-control" placeholder="Number of Songs" aria-label="Number of Songs" aria-describedby="basic-addon2">
             </div>
         </div>
-        <div class="col-2"></div>
     </div>
     <br />
-    <br />
+    <br/>
     @if (YTsearchEngine == false)
     {
         <div class="row">
