--- a/BSPracaInzynierska/Client/Pages/Register.razor
+++ b/BSPracaInzynierska/Client/Pages/Register.razor
@@ -16,7 +16,7 @@
             <br />
             <input type="password" @bind-value="@userPassword" class="form-control" placeholder="Password" />
             <br />
-            <button class="btn btn-primary" @onclick="RegisterUser">Login</button>
+            <button class="btn btn-primary" @onclick="RegisterUser">Sign Up</button>
         </div>
         <div class="col-3"></div>
     </div>
