--- a/BSPracaInzynierska/Client/Pages/Profile.razor
+++ b/BSPracaInzynierska/Client/Pages/Profile.razor
@@ -12,7 +12,6 @@ else
 {
         <h1 style="font-weight:bold">This is profile of @currentUser.Username</h1>
 }
-    <br />
 <h3 style="font-weight:bold">User Infos:</h3>
 <h6>Email: @currentUser.Email</h6>
 <h6>Saved playlists: @profileService.favouritePlaylists.Count()</h6>
@@ -26,8 +25,6 @@ else
     <option value="False">Saved playlists</option>
 </select>
 }
-
-<br />
 <br />
 @if (isCreatedShow == true)
 {
@@ -44,9 +41,11 @@ else
         <br />
         <br />
     }
-    <div class="container mx-auto" style="display: flex; flex-wrap: wrap; gap: 10px;">
+    <div class="container">
+        <div class="row">
         @foreach (var playlist in profileService.createdPlaylists)
         {
+            <div class="col-3">
             <div class="card" style="margin:auto; width: 15rem;">
                 <img class="card-img-top" src="@playlist.Songs.FirstOrDefault().Picture" alt="Card image cap">
                 <div class="card-body">
@@ -64,7 +63,9 @@ else
                     <button class="btn btn-success" @onclick="() => PlayGameOne(playlist.Id)" type="button">Play</button>
                 </div>
             </div>
+            </div>
         }
+        </div>
     </div>
 
 }
@@ -73,9 +74,11 @@ else
         <h1 style="font-weight:bold">Saved Playlists</h1>
     <br />
     <br />
-    <div class="container mx-auto" style="display: flex; flex-wrap: wrap; gap: 10px;">
+    <div class="container">
+        <div class="row">
         @foreach (var playlist in profileService.favouritePlaylists)
         {
+            <div class="col-3">
             <div class="card" style="margin:auto; width: 15rem;">
                 <img class="card-img-top" src="@playlist.Songs.FirstOrDefault().Picture" alt="Card image cap">
                 <div class="card-body">
@@ -88,7 +91,9 @@ else
                     <button class="btn btn-success" @onclick="() => PlayGameOne(playlist.Id)" type="button">Play</button>
                 </div>
             </div>
+            </div>
         }
+        </div>
     </div>
 }
 </div>
