--- a/BSPracaInzynierska/Client/Pages/GameTypeOne.razor
+++ b/BSPracaInzynierska/Client/Pages/GameTypeOne.razor
@@ -8,7 +8,7 @@
 <div class="container mx-auto text-center">
     <h1 class="font-weight-bold">Lightning Rounds</h1>
     <br />
-    <div>
+    <div hidden>
         <div id="player"></div>
     </div>
     
