--- a/BSPracaInzynierska/Client/Pages/Register.razor
+++ b/BSPracaInzynierska/Client/Pages/Register.razor
@@ -17,6 +17,8 @@
             <input type="password" @bind-value="@userPassword" class="form-control" placeholder="Password" />
             <br />
             <button class="btn btn-primary" @onclick="RegisterUser">Sign Up</button>
+            <br />
+            <p class="text-danger">@loginService.errorMess</p>
         </div>
         <div class="col-3"></div>
     </div>
@@ -33,6 +35,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        loginService.errorMess = string.Empty;
         var authState = await authenticationState;
         var user = authState.User;
         if (user.Identity.IsAuthenticated)
@@ -43,8 +46,13 @@
 
     public async Task RegisterUser()
     {
+        loginService.errorMess = string.Empty;
         await loginService.Register(userName, userPassword);
-        navigationManager.NavigateTo("/login", true);
+        await InvokeAsync(() => StateHasChanged());
+        if(loginService.errorMess == string.Empty)
+        {
+            navigationManager.NavigateTo("/login", true);
+        }
     }
 
 
